Made a new notebook for a long df "subject_wise_qc"
Also made a few cleaning changes to depreciate old files.
Added a new bar plot for the data review.
Added a new csv file for the qc responses.
	modified:   .DS_Store
	modified:   anag_stats_/.DS_Store
	deleted:    anag_stats_/Data review/anagram_statistics20240809_1325.csv
	deleted:    anag_stats_/Data review/anagram_statistics20240813_1448.csv
	new file:   anag_stats_/Data review/bar_plot_large.png
	new file:   anag_stats_/Data review/making_longdf.ipynb
	deleted:    anag_stats_/Data review/preliminary_qc copy.ipynb
	modified:   anag_stats_/Data review/preliminary_qc.ipynb
	new file:   anag_stats_/Data review/qc_responses.csv
	modified:   anag_stats_/Data review/subject_wise_qc.ipynb
	deleted:    bar1.png

--- a/anag_stats_/Data review/preliminary_qc.ipynb
+++ b/anag_stats_/Data review/preliminary_qc.ipynb
@@ -37,13 +37,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of       id anagram                                          response\n",
+       "0    001   otbau                 about batou aotbu bat about about\n",
+       "1    002  yeowll           yellow yellow yellow yeow yellow yellow\n",
+       "2    003   lilts                 still still tils slit still still\n",
+       "3    004    eorv                     rove rove vore rove over over\n",
+       "4    005   eanrl                learn learn learn reak learn learn\n",
+       "..   ...     ...                                               ...\n",
+       "355  356   wieht         theiw white white withe white white weiht\n",
+       "356  357    ryma                mary mary mary army army army mary\n",
+       "357  358   lodwr            wo drowl world world world drowl world\n",
+       "358  359    acpm                camp mapc camp camp camp camp camp\n",
+       "359  360  iqnuue  quenui unique unique unique unique unique unique\n",
+       "\n",
+       "[360 rows x 3 columns]>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grammerdf = df.filter(['id', 'anagram', 'response']).dropna()\n",
     "grammerdf = grammerdf[~((grammerdf['id'] == 'practice') | (grammerdf['id']== 'end_confirm_subjid'))]\n",
-    "grammerdf_grouped = grammerdf.groupby('id').agg({'anagram': 'first', 'response': ' '.join}).reset_index()"
+    "grammerdf_grouped = grammerdf.groupby('id').agg({'anagram': 'first', 'response': ' '.join}).reset_index()\n"
    ]
   },
   {
@@ -55,9 +79,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>anagram_x</th>\n",
+       "      <th>correct</th>\n",
+       "      <th>response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>001</td>\n",
+       "      <td>otbau</td>\n",
+       "      <td>about</td>\n",
+       "      <td>about batou aotbu bat about about</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>002</td>\n",
+       "      <td>yeowll</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>yellow yellow yellow yeow yellow yellow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>003</td>\n",
+       "      <td>lilts</td>\n",
+       "      <td>still</td>\n",
+       "      <td>still still tils slit still still</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>004</td>\n",
+       "      <td>eorv</td>\n",
+       "      <td>over</td>\n",
+       "      <td>rove rove vore rove over over</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>005</td>\n",
+       "      <td>eanrl</td>\n",
+       "      <td>learn</td>\n",
+       "      <td>learn learn learn reak learn learn</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id anagram_x correct                                 response\n",
+       "0  001     otbau   about        about batou aotbu bat about about\n",
+       "1  002    yeowll  yellow  yellow yellow yellow yeow yellow yellow\n",
+       "2  003     lilts   still        still still tils slit still still\n",
+       "3  004      eorv    over            rove rove vore rove over over\n",
+       "4  005     eanrl   learn       learn learn learn reak learn learn"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#import the stimuli file from the experiment (since this ensures the same data and lists)\n",
     "import json\n",
@@ -83,9 +188,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>non_match_count</th>\n",
+       "      <th>match_ratio</th>\n",
+       "      <th>response_count</th>\n",
+       "      <th>match_count</th>\n",
+       "      <th>anagram_x</th>\n",
+       "      <th>correct</th>\n",
+       "      <th>response</th>\n",
+       "      <th>response1</th>\n",
+       "      <th>response2</th>\n",
+       "      <th>response3</th>\n",
+       "      <th>response4</th>\n",
+       "      <th>response5</th>\n",
+       "      <th>response6</th>\n",
+       "      <th>response7</th>\n",
+       "      <th>response8</th>\n",
+       "      <th>response9</th>\n",
+       "      <th>response10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>001</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>otbau</td>\n",
+       "      <td>about</td>\n",
+       "      <td>about batou aotbu bat about about</td>\n",
+       "      <td>about</td>\n",
+       "      <td>batou</td>\n",
+       "      <td>aotbu</td>\n",
+       "      <td>bat</td>\n",
+       "      <td>about</td>\n",
+       "      <td>about</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>002</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>yeowll</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>yellow yellow yellow yeow yellow yellow</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>yeow</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>003</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>lilts</td>\n",
+       "      <td>still</td>\n",
+       "      <td>still still tils slit still still</td>\n",
+       "      <td>still</td>\n",
+       "      <td>still</td>\n",
+       "      <td>tils</td>\n",
+       "      <td>slit</td>\n",
+       "      <td>still</td>\n",
+       "      <td>still</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>004</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>eorv</td>\n",
+       "      <td>over</td>\n",
+       "      <td>rove rove vore rove over over</td>\n",
+       "      <td>rove</td>\n",
+       "      <td>rove</td>\n",
+       "      <td>vore</td>\n",
+       "      <td>rove</td>\n",
+       "      <td>over</td>\n",
+       "      <td>over</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>eanrl</td>\n",
+       "      <td>learn</td>\n",
+       "      <td>learn learn learn reak learn learn</td>\n",
+       "      <td>learn</td>\n",
+       "      <td>learn</td>\n",
+       "      <td>learn</td>\n",
+       "      <td>reak</td>\n",
+       "      <td>learn</td>\n",
+       "      <td>learn</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id  non_match_count  match_ratio  response_count  match_count anagram_x  \\\n",
+       "0  001                3     0.500000               6            3     otbau   \n",
+       "1  002                1     0.833333               6            5    yeowll   \n",
+       "2  003                2     0.666667               6            4     lilts   \n",
+       "3  004                4     0.333333               6            2      eorv   \n",
+       "4  005                1     0.833333               6            5     eanrl   \n",
+       "\n",
+       "  correct                                 response response1 response2  \\\n",
+       "0   about        about batou aotbu bat about about     about     batou   \n",
+       "1  yellow  yellow yellow yellow yeow yellow yellow    yellow    yellow   \n",
+       "2   still        still still tils slit still still     still     still   \n",
+       "3    over            rove rove vore rove over over      rove      rove   \n",
+       "4   learn       learn learn learn reak learn learn     learn     learn   \n",
+       "\n",
+       "  response3 response4 response5 response6 response7 response8 response9  \\\n",
+       "0     aotbu       bat     about     about      None      None      None   \n",
+       "1    yellow      yeow    yellow    yellow      None      None      None   \n",
+       "2      tils      slit     still     still      None      None      None   \n",
+       "3      vore      rove      over      over      None      None      None   \n",
+       "4     learn      reak     learn     learn      None      None      None   \n",
+       "\n",
+       "  response10  \n",
+       "0       None  \n",
+       "1       None  \n",
+       "2       None  \n",
+       "3       None  \n",
+       "4       None  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_stat = merged['response'].str.split(' ', expand=True)\n",
     "anagram_stat.columns = ['response1', 'response2', 'response3', 'response4', 'response5', 'response6', 'response7', 'response8', 'response9', 'response10']\n",
@@ -120,7 +411,7 @@
     "# Add to the df next to the id column\n",
     "cols = anagram_stat.columns.tolist()\n",
     "cols.insert(id_index + 1, cols.pop(cols.index('non_match_count')))\n",
-    "anagram_stat = anagram_stat[cols]"
+    "anagram_stat = anagram_stat[cols]\n"
    ]
   },
   {
@@ -143,11 +434,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_78619/259965843.py:3: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_47036/259965843.py:3: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: x.replace(\" \", \"\") if isinstance(x, str) else x) # remove spaces\n",
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_78619/259965843.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_47036/259965843.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: x.lower() if isinstance(x, str) else x) # make lower case\n",
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_78619/259965843.py:5: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_47036/259965843.py:5: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  responses = responses.applymap(lambda x: ''.join(filter(str.isalpha, x)) if isinstance(x, str) else x) # remove non alphabetical characters\n"
      ]
     }
@@ -182,7 +473,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_78619/170734273.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_47036/170734273.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  string_length = responses.applymap(lambda x: len(x) if isinstance(x, str) else 0)\n"
      ]
     }
@@ -210,7 +501,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_78619/1553544211.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/4n/6xdj3h3x4v94vpyhm5330k280000gn/T/ipykernel_47036/1553544211.py:4: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  characters = responses.applymap(lambda x: Counter(x) if isinstance(x, str) else x)\n"
      ]
     }
@@ -257,39 +548,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay I'm worried about this dictionary that I imported may not contain a few words so I asked copilot to make a lil checker. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "word_to_check = \"women\"\n",
-    "is_valid = word_to_check in valid_words\n",
-    "print(is_valid)  # This will print True if the word is valid, otherwise False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### With a QC response fame Now\n",
     "Lets add to our stats df an accuracy collumn which is the sum of the number of qc'd responses for that anagram id. It'll be a col next to ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
