Todo: work on anagram_utils, making_anagrams_refactor.ipynb , and the test modules 	modified:   anag_stats_/Making Anagrams/anagram_utils.py 	modified:   anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb

--- a/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "id": "3c67cb28",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,6 +77,7 @@
     "\n",
     "import nltk\n",
     "import numpy as np\n",
+    "import itertools\n",
     "from nltk.corpus import wordnet as wn\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.tag import pos_tag\n",
@@ -101,22 +102,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d44ce8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from nltk.tag import pos_tag\n",
-    "# nltk.download('punkt')\n",
-    "# nltk.download('averaged_perceptron_tagger')\n",
-    "\n",
-    "test_words = ['george', 'jesus', 'was', 'the', 'first', 'president', 'of', 'the', 'united', 'states']\n",
-    "good_words = remove_proper_nouns(test_words)\n",
-    "print(good_words)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "387d166f",
    "metadata": {},
@@ -130,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -161,13 +146,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
    "source": [
     "word_frequencies = get_word_frequencies(word_dict)\n",
-    "sorted_wordlist = sort_words_by_frequency(word_frequencies)"
+    "sorted_wordlist = sort_words_by_frequency(word_frequencies)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# define the list we want, so for each column of the sorted word list grab the first 200\n",
+    "  # Convert each value (which should be a list) to a list\n",
+    "column_lists = [list(value) for value in sorted_wordlist.values()]\n",
+    "  # Combine these lists into a list of lists\n",
+    "sorted_wordlist = list(zip(*column_lists))\n",
+    "\n",
+    "top_words = get_top_n_words(sorted_wordlist, 200)\n",
+    "full_list = [word for sublist in top_words for word in sublist]"
    ]
   },
   {
@@ -180,52 +176,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "ee42a10f",
+   "cell_type": "markdown",
+   "id": "4e9d1703",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# define the list we want, so for each column of the sorted word list grab the first 200\n",
-    "  # Convert each value (which should be a list) to a list\n",
-    "column_lists = [list(value) for value in sorted_wordlist.values()]\n",
-    "  # Combine these lists into a list of lists\n",
-    "sorted_wordlist = list(zip(*column_lists))\n",
-    "\n",
-    "top_words = get_top_n_words(sorted_wordlist, 200)\n",
-    "full_list = [word for sublist in top_words for word in sublist]"
+    "# New functions\n",
+    "Okay I'm realizing that I've gotta make more functions (RIP). I draft them here and then move them to the Utils file. \n",
+    "After the util file, I'll need to write a test (double RIP). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "id": "a39620e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#make function to shuffle the letters and append to the list\n",
+    "#---deprecate on update, now in the util file nneed to make tests for this --#\n",
+    "#function to shuffle the letters and append to the list\n",
     "def shuffle_letters(word):\n",
     "    shuffled = list(word)\n",
     "    random.shuffle(shuffled)\n",
     "    shuffled_word = \"\".join(shuffled)\n",
     "    return shuffled_word\n",
     "\n",
-    "# make a function that takes a list uses the shuffle letters function and returns a list of shuffled words\n",
+    "#function that takes a list uses the shuffle letters function and returns a list of shuffled words\n",
     "def shuffle_list(word_list):\n",
     "    shuffled_list = []\n",
     "    for word in word_list:\n",
     "        shuffled_list.append(shuffle_letters(word))\n",
     "    return shuffled_list\n",
     "\n",
+    "#function to review the cat list and find doubles in the shuffled column and to shuffle again, then return that word to the list\n",
+    "def check_for_doubles(cat_full_list):\n",
+    "    for index, row in cat_full_list.iterrows():\n",
+    "        if row['root'] == row['shuffled']:\n",
+    "            cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
+    "    return cat_full_list\n",
     "\n",
-    "full_list_shuffled = shuffle_list(full_list)\n",
-    "#cat_full_list = list(zip(full_list, full_list_shuffled))\n",
-    "cat_full_list = pd.DataFrame({\n",
-    "    'root'  : full_list,\n",
-    "    'shuffled' : full_list_shuffled\n",
-    "})"
+    "#function to check that the shuffled word is not the same as the root word and reshuffle if it is\n",
+    "def check_for_same(cat_full_list):\n",
+    "    for index, row in cat_full_list.iterrows():\n",
+    "        if row['root'] == row['shuffled']:\n",
+    "            cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
+    "    return cat_full_list\n",
+    "\n",
+    "#----------------end-----------------#\n",
+    "\n",
+    "#function to check if the word is in the dictionary\n",
+    "def check_word(word):\n",
+    "    if word in full_list:\n",
+    "        return f\"{word} is in the dictionary\"\n",
+    "    else:\n",
+    "        return f\"{word} is not in the dictionary\"\n",
+    "    \n",
+    "#function for finding the possible words made out of the string of letters in shuffled, we are calling these the valid words\n",
+    "def find_valid_words(input_string):\n",
+    "     valid_words = []\n",
+    "     permutations = itertools.permutations(input_string)\n",
+    "     for perm in permutations:\n",
+    "         perm_word = \"\".join(perm)\n",
+    "         result = check_word(perm_word)\n",
+    "         if \"is not in the dictionary\" not in result:\n",
+    "             valid_words.append(perm_word)\n",
+    "\n",
+    "     return valid_words\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "12506fc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -244,24 +268,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using the the fivestring, sixstring, and fourstring dictionaries we will make a function to check if a word is in the dictionary and return the definition of the word if it is.\n",
-    "# def check_word(word):\n",
-    "#     if word in fivestrings:\n",
-    "#         return f\"{word}: {fivestrings[word]}\"\n",
-    "#     elif word in sixstrings:\n",
-    "#         return f\"{word}: {sixstrings[word]}\"\n",
-    "#     elif word in fourstrings:\n",
-    "#         return f\"{word}: {fourstrings[word]}\"\n",
-    "#     else:\n",
-    "#         return f\"{word} is not in the dictionary\"\n",
-    "\n",
-    "\n",
-    "# that function we can embed in a loop that checks if a permutation is in our dictionary.\n",
-    "# we will need to first keep each string list separate to then reorder the letters and then check if that is a word, if so we we add it, otherwise we move to next word\n",
-    "# we will make a permutation such that \"baout\" will be arranged to \"outba\" check if that's a word, if not move to next permutation\n",
-    "import itertools\n",
-    "\n",
-    "\n",
     "# def find_valid_words(input_string):\n",
     "#     valid_words = []\n",
     "#     permutations = itertools.permutations(input_string)\n",
@@ -410,7 +416,6 @@
     "    \"./group_3_word_pairs.csv\",\n",
     "    \"./group_4_word_pairs.csv\",\n",
     ")\n",
-    "\n",
     "\n",
     "# Function to convert CSV content to JS format\n",
     "def csv_to_js_format(csv_content, set_name):\n",
