New functions on the anagram utils, making a few more for cleaning words. Shuffling works now and next will be creating the functions for the anagram stats & json formating 	modified:   anag_stats_/Making Anagrams/anagram_utils.py 	modified:   anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb

--- a/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
@@ -33,18 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "3c67cb28",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -60,7 +52,7 @@
        "True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,8 +80,12 @@
     "    get_word_frequencies,\n",
     "    sort_words_by_frequency,\n",
     "    get_top_n_words,\n",
-    "    \n",
+    "    shuffle_letters,\n",
+    "    shuffle_list,\n",
+    "    check_for_doubles,\n",
+    "    check_for_same\n",
     ")\n",
+    "\n",
     "nltk.download(\"wordnet\")\n"
    ]
   },
@@ -115,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -146,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -162,8 +158,26 @@
     "  # Combine these lists into a list of lists\n",
     "sorted_wordlist = list(zip(*column_lists))\n",
     "\n",
-    "top_words = get_top_n_words(sorted_wordlist, 200)\n",
-    "full_list = [word for sublist in top_words for word in sublist]"
+    "full_list = get_top_n_words(sorted_wordlist, 200)\n",
+    "full_list = [word for sublist in full_list for word in sublist] #help me figure out why this wasn't done in my util func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "879c4b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# finding out if the functions are working @ shit need to actually make full list and then catenate hence the cat\n",
+    "# so the get top words should flatten the collumns and then make a shuffled list, concat/stitch to make a df \n",
+    "shuffled_list = shuffle_list(full_list) \n",
+    "cat_full_list = pd.DataFrame({\n",
+    "    \"root\" : full_list,\n",
+    "    \"shuffled\" : shuffled_list\n",
+    "})\n",
+    "cat_full_list= check_for_doubles(cat_full_list)\n",
+    "cat_full_list= check_for_same(cat_full_list)"
    ]
   },
   {
@@ -187,45 +201,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "a39620e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "#---deprecate on update, now in the util file nneed to make tests for this --#\n",
     "#function to shuffle the letters and append to the list\n",
-    "def shuffle_letters(word):\n",
-    "    shuffled = list(word)\n",
-    "    random.shuffle(shuffled)\n",
-    "    shuffled_word = \"\".join(shuffled)\n",
-    "    return shuffled_word\n",
+    "# def shuffle_letters(word):\n",
+    "#     shuffled = list(word)\n",
+    "#     random.shuffle(shuffled)\n",
+    "#     shuffled_word = \"\".join(shuffled)\n",
+    "#     return shuffled_word\n",
     "\n",
-    "#function that takes a list uses the shuffle letters function and returns a list of shuffled words\n",
-    "def shuffle_list(word_list):\n",
-    "    shuffled_list = []\n",
-    "    for word in word_list:\n",
-    "        shuffled_list.append(shuffle_letters(word))\n",
-    "    return shuffled_list\n",
+    "# #function that takes a list uses the shuffle letters function and returns a list of shuffled words\n",
+    "# def shuffle_list(word_list):\n",
+    "#     shuffled_list = []\n",
+    "#     for word in word_list:\n",
+    "#         shuffled_list.append(shuffle_letters(word))\n",
+    "#     return shuffled_list\n",
     "\n",
     "#function to review the cat list and find doubles in the shuffled column and to shuffle again, then return that word to the list\n",
-    "def check_for_doubles(cat_full_list):\n",
-    "    for index, row in cat_full_list.iterrows():\n",
-    "        if row['root'] == row['shuffled']:\n",
-    "            cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
-    "    return cat_full_list\n",
+    "# def check_for_doubles(cat_full_list):\n",
+    "#     for index, row in cat_full_list.iterrows():\n",
+    "#         if row['root'] == row['shuffled']:\n",
+    "#             cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
+    "#     return cat_full_list\n",
     "\n",
-    "#function to check that the shuffled word is not the same as the root word and reshuffle if it is\n",
-    "def check_for_same(cat_full_list):\n",
-    "    for index, row in cat_full_list.iterrows():\n",
-    "        if row['root'] == row['shuffled']:\n",
-    "            cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
-    "    return cat_full_list\n",
+    "# #function to check that the shuffled word is not the same as the root word and reshuffle if it is\n",
+    "# def check_for_same(cat_full_list):\n",
+    "#     for index, row in cat_full_list.iterrows():\n",
+    "#         if row['root'] == row['shuffled']:\n",
+    "#             cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
+    "#     return cat_full_list\n",
     "\n",
-    "#----------------end-----------------#\n",
+    "# #----------------end-----------------#\n",
     "\n",
-    "#function to check if the word is in the dictionary\n",
+    "#function to check if the word is in the dictionary (needed for function below)\n",
     "def check_word(word):\n",
-    "    if word in full_list:\n",
+    "    if word in cat_full_list['root'].values:\n",
     "        return f\"{word} is in the dictionary\"\n",
     "    else:\n",
     "        return f\"{word} is not in the dictionary\"\n",
@@ -239,13 +253,12 @@
     "         result = check_word(perm_word)\n",
     "         if \"is not in the dictionary\" not in result:\n",
     "             valid_words.append(perm_word)\n",
-    "\n",
     "     return valid_words\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "12506fc9",
    "metadata": {},
    "outputs": [],
