Tidy'd up the code in notebook. 	modified:   anag_stats_/Making Anagrams/__pycache__/anagram_utils.cpython-312.pyc 	modified:   anag_stats_/Making Anagrams/anagram_utils.py 	modified:   anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb

--- a/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
@@ -77,15 +77,16 @@
     "from propernoun import remove_proper_nouns\n",
     "from anagram_utils import (\n",
     "    mk_dict_from_wordnet_for_length,\n",
+    "    remove_from_dict,\n",
     "    get_word_frequencies,\n",
     "    sort_words_by_frequency,\n",
     "    get_top_n_words,\n",
     "    shuffle_letters,\n",
     "    shuffle_list,\n",
+    "    reformat_sorted_wordlist,\n",
     "    check_for_doubles,\n",
     "    check_for_same\n",
     ")\n",
-    "\n",
     "nltk.download(\"wordnet\")\n"
    ]
   },
@@ -137,47 +138,14 @@
     "# making a loop through the word dic to use the remove proper nouns function\n",
     "for wordlength in word_dict:\n",
     "    word_dict[wordlength] = remove_proper_nouns(word_dict[wordlength])\n",
-    "    print(f'found {len(word_dict[wordlength])} words of length {wordlength}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "71eeb548",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "word_frequencies = get_word_frequencies(word_dict)\n",
-    "sorted_wordlist = sort_words_by_frequency(word_frequencies)\n",
+    "    print(f'found {len(word_dict[wordlength])} words of length {wordlength}')\n",
     "\n",
-    "\n",
-    "\n",
-    "# define the list we want, so for each column of the sorted word list grab the first 200\n",
-    "  # Convert each value (which should be a list) to a list\n",
-    "column_lists = [list(value) for value in sorted_wordlist.values()]\n",
-    "  # Combine these lists into a list of lists\n",
-    "sorted_wordlist = list(zip(*column_lists))\n",
-    "\n",
-    "full_list = get_top_n_words(sorted_wordlist, 200)\n",
-    "full_list = [word for sublist in full_list for word in sublist] #help me figure out why this wasn't done in my util func"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "879c4b9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# finding out if the functions are working @ shit need to actually make full list and then catenate hence the cat\n",
-    "# so the get top words should flatten the collumns and then make a shuffled list, concat/stitch to make a df \n",
-    "shuffled_list = shuffle_list(full_list) \n",
-    "cat_full_list = pd.DataFrame({\n",
-    "    \"root\" : full_list,\n",
-    "    \"shuffled\" : shuffled_list\n",
-    "})\n",
-    "cat_full_list= check_for_doubles(cat_full_list)\n",
-    "cat_full_list= check_for_same(cat_full_list)"
+    "# define our curse words or other words to remove\n",
+    "curse_words = [\"shit\", \"piss\", \"fuck\", \"cunt\", \"cocksucker\", \"motherfucker\", \"tits\"] #rip george carlin\n",
+    "other_words_to_remove = [\"jeus\", \"george\", \"john\"]\n",
+    "# use the remove from dict func to take those ones out\n",
+    "word_dict = remove_from_dict(word_dict, curse_words) # from dictinary remove the curse words \n",
+    "word_dict = remove_from_dict(word_dict, other_words_to_remove) # from the dictionary remove the other words "
    ]
   },
   {
@@ -187,6 +155,30 @@
    "source": [
     "## Dictionary made, lets get our words\n",
     "I made a get words function to grab the list I want based off how many grams we want to have at the end. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71eeb548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_frequencies = get_word_frequencies(word_dict) # we get the word frequencies\n",
+    "sorted_wordlist = sort_words_by_frequency(word_frequencies) # we sort the dictionary by frequency\n",
+    "sorted_wordlist = reformat_sorted_wordlist(sorted_wordlist) # we reformat the dictionary for the get_top_n_words function\n",
+    "# make your subset list of words for the anagrams\n",
+    "full_list = get_top_n_words(sorted_wordlist, 200) # we make a full list of n words which is 200 here\n",
+    "full_list = [word for sublist in full_list for word in sublist] # flatten that list\n",
+    "# kewl so lets make a list of those words but shuffled letters ie our anagrams\n",
+    "shuffled_list = shuffle_list(full_list) # we take the list and make a new list of each word's letters shuffled (anagram)\n",
+    "# and for the next few things it's gonna help to also have a df of these two lits as root and shuffled\n",
+    "cat_full_list = pd.DataFrame({\n",
+    "    \"root\" : full_list,\n",
+    "    \"shuffled\" : shuffled_list #must name it shuffled for the next function\n",
+    "})\n",
+    "cat_full_list= check_for_doubles(cat_full_list) # we check for any words that are the same in the root and shuffled columns \n",
+    "cat_full_list= check_for_same(cat_full_list) # we check for any duplicates in the shuffled coll and reshuffle them"
    ]
   },
   {
@@ -206,36 +198,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#---deprecate on update, now in the util file nneed to make tests for this --#\n",
-    "#function to shuffle the letters and append to the list\n",
-    "# def shuffle_letters(word):\n",
-    "#     shuffled = list(word)\n",
-    "#     random.shuffle(shuffled)\n",
-    "#     shuffled_word = \"\".join(shuffled)\n",
-    "#     return shuffled_word\n",
-    "\n",
-    "# #function that takes a list uses the shuffle letters function and returns a list of shuffled words\n",
-    "# def shuffle_list(word_list):\n",
-    "#     shuffled_list = []\n",
-    "#     for word in word_list:\n",
-    "#         shuffled_list.append(shuffle_letters(word))\n",
-    "#     return shuffled_list\n",
-    "\n",
-    "#function to review the cat list and find doubles in the shuffled column and to shuffle again, then return that word to the list\n",
-    "# def check_for_doubles(cat_full_list):\n",
-    "#     for index, row in cat_full_list.iterrows():\n",
-    "#         if row['root'] == row['shuffled']:\n",
-    "#             cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
-    "#     return cat_full_list\n",
-    "\n",
-    "# #function to check that the shuffled word is not the same as the root word and reshuffle if it is\n",
-    "# def check_for_same(cat_full_list):\n",
-    "#     for index, row in cat_full_list.iterrows():\n",
-    "#         if row['root'] == row['shuffled']:\n",
-    "#             cat_full_list.at[index, 'shuffled'] = shuffle_letters(row['root'])\n",
-    "#     return cat_full_list\n",
-    "\n",
-    "# #----------------end-----------------#\n",
     "\n",
     "#function to check if the word is in the dictionary (needed for function below)\n",
     "def check_word(word):\n",
@@ -255,14 +217,6 @@
     "             valid_words.append(perm_word)\n",
     "     return valid_words\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12506fc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
