--- a/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/Making Anagrams/making_anagrams_refactor.ipynb
@@ -81,13 +81,13 @@
     "    get_word_frequencies,\n",
     "    sort_words_by_frequency,\n",
     "    get_top_n_words,\n",
-    "    shuffle_letters,\n",
+    "    shuffle_letters,# @ russ do I keep this if it is used in the shuffle list function? \n",
     "    shuffle_list,\n",
     "    reformat_sorted_wordlist,\n",
     "    check_for_doubles,\n",
     "    check_for_same\n",
     ")\n",
-    "nltk.download(\"wordnet\")\n"
+    "nltk.download(\"wordnet\") # @ russ do I need this if i've already downloaded?\n"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "03148bc4",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,8 @@
    ],
    "source": [
     "word_dict = {}\n",
-    "for wordlength in [4,5,6]:\n",
+    "wordlengths = [4,5,6] # set the lengths outside of the loop bc we use them later too \n",
+    "for wordlength in wordlengths:\n",
     "    word_dict[wordlength] = mk_dict_from_wordnet_for_length(wordlength)\n",
     "    print(f'found {len(word_dict[wordlength])} words of length {wordlength}')\n",
     "\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -168,11 +169,11 @@
     "sorted_wordlist = sort_words_by_frequency(word_frequencies) # we sort the dictionary by frequency\n",
     "sorted_wordlist = reformat_sorted_wordlist(sorted_wordlist) # we reformat the dictionary for the get_top_n_words function\n",
     "# make your subset list of words for the anagrams\n",
-    "full_list = get_top_n_words(sorted_wordlist, 200) # we make a full list of n words which is 200 here\n",
-    "full_list = [word for sublist in full_list for word in sublist] # flatten that list\n",
+    "number_of_anagrams_per_word_length = 200\n",
+    "full_list = get_top_n_words(sorted_wordlist, number_of_anagrams_per_word_length)\n",
     "# kewl so lets make a list of those words but shuffled letters ie our anagrams\n",
     "shuffled_list = shuffle_list(full_list) # we take the list and make a new list of each word's letters shuffled (anagram)\n",
-    "# and for the next few things it's gonna help to also have a df of these two lits as root and shuffled\n",
+    "# and for the next few things it's gonna help to also have a df of these two lits named root and shuffled\n",
     "cat_full_list = pd.DataFrame({\n",
     "    \"root\" : full_list,\n",
     "    \"shuffled\" : shuffled_list #must name it shuffled for the next function\n",
@@ -193,15 +194,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a39620e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m      \u001b[38;5;28;01mreturn\u001b[39;00m valid_words\n\u001b[1;32m     19\u001b[0m test_strings \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meltie\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdcoe\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcowr\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mearb\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 20\u001b[0m test_strings_valid_words \u001b[38;5;241m=\u001b[39m [find_valid_words(test_strings) ]\n",
+      "Cell \u001b[0;32mIn[18], line 14\u001b[0m, in \u001b[0;36mfind_valid_words\u001b[0;34m(input_string)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m perm \u001b[38;5;129;01min\u001b[39;00m permutations:\n\u001b[1;32m     13\u001b[0m     perm_word \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(perm)\n\u001b[0;32m---> 14\u001b[0m     result \u001b[38;5;241m=\u001b[39m check_word(perm_word)\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis not in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[1;32m     16\u001b[0m         valid_words\u001b[38;5;241m.\u001b[39mappend(perm_word)\n",
+      "Cell \u001b[0;32mIn[18], line 3\u001b[0m, in \u001b[0;36mcheck_word\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_word\u001b[39m(word):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_dict[wordlengths]\u001b[38;5;241m.\u001b[39mvalues:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "#function to check if the word is in the dictionary (needed for function below)\n",
     "def check_word(word):\n",
-    "    if word in cat_full_list['root'].values:\n",
+    "    if word in word_dict[wordlengths].values:\n",
     "        return f\"{word} is in the dictionary\"\n",
     "    else:\n",
     "        return f\"{word} is not in the dictionary\"\n",
@@ -211,12 +225,37 @@
     "     valid_words = []\n",
     "     permutations = itertools.permutations(input_string)\n",
     "     for perm in permutations:\n",
-    "         perm_word = \"\".join(perm)\n",
+    "         perm_word = \"\".join(perm) # @lynde todo, fix this\n",
     "         result = check_word(perm_word)\n",
     "         if \"is not in the dictionary\" not in result:\n",
     "             valid_words.append(perm_word)\n",
-    "     return valid_words\n"
+    "     return valid_words\n",
+    "\n",
+    "test_strings = ['eltie','dcoe','cowr','earb']\n",
+    "test_strings_valid_words = find_valid_words(test_strings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "07112780",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'root'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m solutions_list \u001b[38;5;241m=\u001b[39m find_valid_words(shuffled_list[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;66;03m# we find the valid words for the first word in the shuffled list\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(solutions_list)\n",
+      "Cell \u001b[0;32mIn[9], line 14\u001b[0m, in \u001b[0;36mfind_valid_words\u001b[0;34m(input_string)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m perm \u001b[38;5;129;01min\u001b[39;00m permutations:\n\u001b[1;32m     13\u001b[0m     perm_word \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(perm)\n\u001b[0;32m---> 14\u001b[0m     result \u001b[38;5;241m=\u001b[39m check_word(perm_word)\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis not in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m result:\n\u001b[1;32m     16\u001b[0m         valid_words\u001b[38;5;241m.\u001b[39mappend(perm_word)\n",
+      "Cell \u001b[0;32mIn[9], line 3\u001b[0m, in \u001b[0;36mcheck_word\u001b[0;34m(word)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_word\u001b[39m(word):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mroot\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is in the dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'root'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
